src/objects/zkmulti__OtherSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores custom settings</description>
    <fields>
        <fullName>zkmulti__CheckboxValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__DateTimeValue__c</fullName>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__TextValue__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zenkraft Other Setting</label>
</CustomObject>